# house-of-knowledge

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: bedrock.py  chunking.py  citations.py  config.py  embedder.py  filters.py  main.py  rag.py  store.py  tracing.py  usage.py
app/pages/: 1_📊_Token_usage.py
docs/: vault-spec.md
docs/superpowers/plans/: 2026-05-29-dnd-rag.md  2026-05-29-token-usage.md  2026-06-12-uv-migration.md  2026-06-17-langfuse-tracing.md
docs/superpowers/specs/: 2026-05-29-dnd-rag-design.md  2026-05-29-token-usage-design.md  2026-06-01-bedrock-converse-multi-model-design.md  2026-06-12-eval-harness-spec.md  2026-06-12-uv-migration-design.md  2026-06-17-langfuse-tracing-design.md
eval/: README.md  agentic_runner.py  config.yaml  golden_set.jsonl  judge.py  make_blind.py  report.py  requirements-eval.txt  retrieval_experiment.py  runner.py  score_retrieval.py  scoring_app.py  unmask.py
eval/runs/2026-07-01-baseline/: judge_scores.jsonl  k_experiment_output.txt  report.md  results.jsonl  retrieval_scores.jsonl  scored.jsonl
eval/runs/2026-07-21-agentic/: judge_scores.jsonl  report.md  results.jsonl  retrieval_scores.jsonl
scripts/: index_notes.py  sync-and-index.sh
tests/: test_bedrock.py  test_chunking.py  test_citations.py  test_config.py  test_eval_golden.py  test_eval_report.py  test_eval_scoring.py  test_filters.py  test_index_notes.py  test_rag.py  test_store.py  test_tracing.py  test_usage.py
tests/fixtures/: sample_note.md
(+5 files in other folders)
