[project]
name = "house-of-knowledge"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "streamlit==1.44.1",
    "chromadb==0.6.3",
    "sentence-transformers==3.4.1",
    "boto3==1.37.29",
    "python-frontmatter==1.1.0",
    "pyyaml==6.0.2",
    "langfuse==4.9.0",
]

[project.optional-dependencies]
eval = [
    "tabulate==0.9.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.5",
]
