[project]
name = "house-of-knowledge"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "streamlit==1.44.1",
    "chromadb==0.6.3",
    "sentence-transformers==3.4.1",
    "boto3==1.37.29",
    "python-frontmatter==1.1.0",
    "pyyaml==6.0.2",
    "langfuse==4.9.0",
]

[project.optional-dependencies]
eval = [
    "tabulate==0.9.0",
    # Judge layer (Stage 6). RAGAS 0.2.x + langchain-aws is the stable Bedrock
    # combo: it resolves onto the langchain-core 0.3.x line. Do NOT bump ragas to
    # 0.4.x — it hard-imports langchain modules removed in the langchain 1.x line
    # and drags in a litellm/instructor openai>=2 conflict.
    "ragas==0.2.15",
    "langchain-aws==0.2.31",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
]
